# monorepo

./: .bazelignore  BUILD.bazel  WORKSPACE  package-lock.json  package.json  tsconfig.json
libs/lib-a/: BUILD.bazel  index.ts  package.json
libs/lib-a/src/: food.resource.ts
libs/lib-b/: BUILD.bazel  index.ts  package.json
libs/lib-b/src/: security.resource.ts
tools/: BUILD.bazel  index.bzl  terser.bzl
